--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,3 +1,57 @@
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home-failure-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+.failure-image-home {
+  width: 60%;
+}
+@media screen and (min-width: 992px) {
+  .failure-image-home {
+    width: 500px;
+  }
+}
+.home-failure-desc {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  font-family: Inter;
+  font-style: normal;
+  color: #475569;
+}
+@media screen and (min-width: 992px) {
+  .home-failure-desc {
+    font-size: 24px;
+    line-height: 48px;
+  }
+}
+.home-failure-button {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  font-family: Inter;
+  font-style: normal;
+  color: #ffffff;
+  border: none;
+  background-color: #0284c7;
+  border-radius: 8px;
+  padding: 8px 16px;
+}
+
+@media screen and (min-width: 992px) {
+  .home-failure-button {
+    font-size: 14px;
+    line-height: 24px;
+    padding: 12px 24px;
+  }
+}
 .home-container {
   display: flex;
   flex-direction: row;
@@ -9,9 +63,7 @@
 .home-bg-inside-container {
   width: 80%;
 }
-/*.home-container-main{
 
-}*/
 .home-heading {
   font-family: Inter;
   font-style: normal;
@@ -58,57 +110,6 @@
 }
 
 /* failure View */
-.home-failure-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 50px;
-}
-.failure-image-home {
-  width: 60%;
-}
-@media screen and (min-width: 992px) {
-  .failure-image-home {
-    width: 500px;
-  }
-}
-
-.home-failure-desc {
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 16px;
-  font-family: Inter;
-  font-style: normal;
-  color: #475569;
-}
-@media screen and (min-width: 992px) {
-  .home-failure-desc {
-    font-size: 24px;
-    line-height: 48px;
-  }
-}
-
-.home-failure-button {
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 16px;
-  font-family: Inter;
-  font-style: normal;
-  color: #ffffff;
-  border: none;
-  background-color: #0284c7;
-  border-radius: 8px;
-  padding: 8px 16px;
-}
-
-@media screen and (min-width: 992px) {
-  .home-failure-button {
-    font-size: 14px;
-    line-height: 24px;
-    padding: 12px 24px;
-  }
-}
 
 .home-top-rated-container {
   height: 560px;
