--- a/src/components/ReactSlick/index.css
+++ b/src/components/ReactSlick/index.css
@@ -1,6 +1,56 @@
-.slider-container {
-  background-color: #fff;
-  width: 100%;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.slick-container {
+  width: 80%;
   max-width: 1100px;
-  padding: 40px;
+  margin-top: 10px;
+}
+
+.logo-image {
+  margin: 0px 10px;
+  height: 170px;
+  width: 140px;
+}
+
+/* You can change the CSS color to style the Next and 
+Previous Arrow buttons according to your project */
+
+.slick-prev:before,
+.slick-next:before {
+  color: black;
+}
+
+.title-heading {
+  font-size: 18px;
+  color: #334155;
+  font-weight: 600;
+  margin: auto;
+  font-family: Inter;
+  font-style: normal;
+  text-align: center;
+  letter-spacing: 0;
+  width: 90%;
+}
+.title-author-name {
+  font-size: 12px;
+  color: #64748b;
+  font-weight: 400;
+  margin: auto;
+  font-family: Inter;
+  font-style: normal;
+  text-align: center;
+  letter-spacing: 0;
+  width: 90%;
+  line-height: 16px;
+}
+.slick-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
